# remoteviewer

./: .gitignore  CMakeLists.txt  CMakePresets.json  HOST_SERVER_REFACTOR_PLAN.md  NATIVE_VIDEO_MILESTONES_M0_M7.md  NEXT_PROJECT_PARSEC_STYLE_PLAN.md  README.md  USER_TEST_CHECKLIST.md  WORK_PROGRESS.md  query  vcpkg.json  구현.md
apps/client/: CMakeLists.txt
apps/client/src/: main.cpp  realtime_runtime_client.cpp  realtime_runtime_client.hpp
apps/host/: CMakeLists.txt
apps/host/src/: audio_runtime.cpp  audio_runtime.hpp  capture_backend_dxgi.cpp  capture_backend_dxgi.hpp  capture_bootstrap.cpp  capture_bootstrap.hpp  capture_runtime.cpp  capture_runtime.hpp  host_non_runtime_paths.cpp  host_non_runtime_paths.hpp  main.cpp  mf_h264_encoder.cpp  mf_h264_encoder.hpp  realtime_media_probe.cpp  realtime_media_probe.hpp  realtime_runtime.cpp  realtime_runtime.hpp  runtime_server.cpp  runtime_server.hpp
apps/native_poc/: CMakeLists.txt  README.md
apps/native_poc/src/: mf_h264_codec.cpp  mf_h264_codec.hpp  native_client_main.cpp  native_host_main.cpp  native_video_client_main.cpp  native_video_host_main.cpp  native_video_transport.hpp  poc_protocol.hpp  time_utils.hpp
apps/signaling/: package-lock.json  package.json  server.js
apps/signaling/public/: client.js  index.html
automation/: analyze_native_video_scene_timeline.ps1  native_video_profile_1080p.json  native_video_profile_1080p_external_template.json  native_video_profile_1080p_lowlat.json  native_video_profile_1080p_quality_10m_k60.json  native_video_profile_1080p_quality_12m_k60.json  native_video_profile_1080p_wan_quality.json  native_video_profile_1296p_balanced.json  native_video_profile_720p.json  native_video_profile_900p_quality.json  package_native_video_external_bundle.ps1  run_native_video_ablation_suite.ps1  run_native_video_with_config.ps1  run_web_runtime.ps1  sig_restart_verify.ps1  soak_runtime_suite.ps1  start_native_video_runtime.ps1  start_native_video_runtime_impl.ps1  start_web_runtime.ps1  start_web_runtime_impl.ps1  status_native_video_runtime.ps1  status_web_runtime.ps1  stop_native_video_runtime.ps1  stop_web_runtime.ps1  tmp_remeasure5.ps1  trace_disconnect_crash.ps1  tune_native_video_h264.ps1  verify_native_video_runtime.ps1  verify_native_video_scene_suite.ps1  verify_runtime_suite.ps1  wan_preflight_native_video.ps1
docs/: README.md  external_wan_test_guide.md  history.md  history_old.md  구현계획.md
libs/common/: CMakeLists.txt
libs/common/include/common/: h264_rtp_packetizer.hpp  input_protocol.hpp  opus_rtp_packetizer.hpp  rtc_signaling_client.hpp  signaling_protocol.hpp  version.hpp  ws_rtc_signaling_client.hpp
libs/common/src/: h264_rtp_packetizer.cpp  input_protocol.cpp  opus_rtp_packetizer.cpp  rtc_signaling_client.cpp  signaling_protocol.cpp  version.cpp  ws_rtc_signaling_client.cpp
